dependencies {
    compileOnly project(":Library:ProtoWeaver:Common")
    compileOnly project(":Library:ProtoWeaver:Bukkit")
    compileOnly project(":Library:ProtoWeaver:Bungee")
    compileOnly project(":Library:ProtoWeaver:Velocity")
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}